--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,15 @@
-#\u914D\u7F6E\u7AEF\u53E3
+#端口配置
 server.port=8080
-#\u914D\u7F6E\u8BBF\u95EE\u8DEF\u5F84
+#文件访问
 server.servlet.context-path=/clover
-#\u914D\u7F6Esession\u6700\u5927\u8D85\u65F6\u65F6\u95F4\uFF0C\u9ED8\u8BA4\u4E3A30min
+#超时session时间配置，默认30min
 server.servlet.session.timeout=60
-#\u70ED\u90E8\u7F72\u914D\u7F6E
-#\u70ED\u90E8\u7F72\u751F\u6548
+#热更新配置
 spring.devtools.restart.enabled=true
-#\u8BBE\u7F6E\u91CD\u542F\u7684\u76EE\u5F55\uFF0C\u6DFB\u52A0\u76F8\u5173\u76EE\u5F55\u6587\u4EF6\u9700\u8981restart
 spring.devtools.restart.additional-paths=src/main/java
-#classpath\u76EE\u5F55\u4E0B\u7684WEB-INF\u6587\u4EF6\u5939\u5185\u5BB9\u4FEE\u6539\u4E0D\u91CD\u542F
 spring.devtools.restart.exclude:WEB-INF/**
-#\u8BBE\u7F6E\u9759\u6001\u6587\u4EF6\u8DEF\u5F84\uFF0Cjs\uFF0Ccss\u7B49\u7B49
+
+#thymeleaf配置，静态资源加载
 spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -20,21 +18,21 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
 
-#\u7F16\u7801\u683C\u5F0F
+#编码格式配置
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
 
-#\u524D\u7AEF\u89C6\u56FEjsp\u914D\u7F6E
+#引入jsp配置
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
 
-#mybatis\u914D\u7F6E
-mybatis.mapper-locations=classpath:com/clover/spring_boot_frame/mapper/*.xml
+#mybatis配置
+mybatis.mapper-locations=classpath:/mapper/*.xml
 
-#mysql\u914D\u7F6E
-spring.datasource.username="root"
-spring.datasource.password="li123456"
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://www.ntg520.cn:3306/spring_boot_framwork?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly
+#mysql配置
+spring.datasource.username=root
+spring.datasource.password=li123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://www.ntg520.cn:3306/spring_boot_framwork
