--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
-#端口配置
+#配置端口
 server.port=8080
-#文件访问
+#配置访问路径
 server.servlet.context-path=/clover
-#超时session时间配置，默认30min
+#配置session最大超时时间，默认为30min
 server.servlet.session.timeout=60
-#热更新配置
+#热部署配置
+#热部署生效
 spring.devtools.restart.enabled=true
+#设置重启的目录，添加相关目录文件需要restart
 spring.devtools.restart.additional-paths=src/main/java
+#classpath目录下的WEB-INF文件夹内容修改不重启
 spring.devtools.restart.exclude:WEB-INF/**
-
-#thymeleaf配置，静态资源加载
+#设置静态文件路径，js，css等等
 spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -18,16 +20,15 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
 
-#编码格式配置
+#编码格式
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
 
-#引入jsp配置
+#前端视图jsp配置
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
-
 #mybatis配置
 mybatis.mapper-locations=classpath:/mapper/*.xml
 
