--- a/spring_boot_dubbo_consumer/pom.xml
+++ b/spring_boot_dubbo_consumer/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.clover</groupId>
-    <artifactId>spring_boot_dubbo_provider</artifactId>
-    <version>1.0.0</version>
-    <name>spring_boot_dubbo_provider</name>
+    <artifactId>spring_boot_dubbo_consumer</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>spring_boot_dubbo_consumer</name>
     <description>Project for Spring Boot</description>
 
     <properties>
@@ -49,18 +49,6 @@
             <groupId>com.clover.dubbo</groupId>
             <artifactId>spring_boot_dubbo_interface</artifactId>
             <version>1.0.0</version>
-        </dependency>
-
-        <!--mybatis整合SpringBoot-->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <!--mysql驱动包-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
     </dependencies>
