--- a/spring_boot_dubbo_provider/src/main/resources/application.properties
+++ b/spring_boot_dubbo_provider/src/main/resources/application.properties
@@ -1,5 +1,21 @@
-
 server.port=8081
+
+#mybatis配置
+mybatis.mapper-locations=classpath:/mapper/*.xml
+
+#mysql配置
+spring.datasource.username=root
+spring.datasource.password=li123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://www.ntg520.cn:3306/spring_boot_framwork
+
+
 
 spring.dubbo.appname=spring_boot_dubbo_provider
 spring.dubbo.registry=zookeeper://www.ntg520.cn:2181
+
+
+dubbo.application.name = spring_boot_dubbo_provider
+dubbo.protocol.name = dubbo
+dubbo.protocol.port = 2181
+dubbo.registry.address = zookeeper://www.ntg520.cn:2181
